# ryp_framework

./: INSTALACION Y USO.txt  LICENSE.md  MEMORIA DE TRABAJO LEEME.txt  README.md  README.txt  pyproject.toml
ryp_framework/: CONTRATO_PIPELINE_TXT_Q_v1_0.md  QUICKSTART_RYP_FRAMEWORK_v1_0.md  __init__.py  cli.py
ryp_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ryp_framework/automation/: __init__.py  builder.py  contracts.py  ingest.py  profiles.py  registry.py  reporting.py  runner.py
ryp_framework/core/: __init__.py  _core.py  _crystal_expansion.py  crystal.py  dynamics.py  metrics.py  simulation.py
ryp_framework/interaction/: __init__.py  levels5.py  levels6.py
ryp_framework/language/: __init__.py
ryp_framework/morphosemantic/: __init__.py  operators.py  prism.py
ryp_framework/resources/: RYP_LEXICON.json
ryp_framework/sam/: __init__.py  build_universal.py  cycles.py  engine.py  extract_chains.py  matrix.py  multilingual.py
ryp_framework/tests/: test_pipeline_contract.py
ryp_framework/utils/: __init__.py  paths.py
ryp_framework/workspace/: README.md
ryp_framework/workspace/01_ENTRADAS/DESCUBRIMIENTOS/: 2026_05_19_032356_CICLO_0001_DESCUBRIMIENTOS.json  2026_05_19_032356_CICLO_0001_DESCUBRIMIENTOS.md  demo_entrada_semantica_1594471783_DESCUBRIMIENTOS.json  demo_entrada_semantica_1594471783_DESCUBRIMIENTOS.md  demo_quickstart_1594471783_DESCUBRIMIENTOS.json  demo_quickstart_1594471783_DESCUBRIMIENTOS.md  (+8 more)
ryp_framework/writer/: __init__.py  critic.py  engine.py  grammar.py  lexicon.py
(+201 files in other folders)
