[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Realidades y Perspectivas (RYP) Cognitiva", email = "contacto@rypiacognitiva.cl"}
]
license = {text = "Business Source License 1.1 (BUSL-1.1)"}
name = "ryp-framework"
version = "1.0.0"
description = "Realidades y Perspectivas (RYP) — S-A-M semantic dynamics framework"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-learn>=1.2",
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "pydantic>=2.0",
    "requests>=2.28",
    "networkx>=3.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
automation = [
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ryp_framework*"]

[tool.setuptools.package-data]
ryp_framework = [
    "resources/*.json",
    "examples/*.txt",
    "workspace/**/*.md",
    "workspace/**/*.json",
    "workspace/**/.gitkeep",
]

[project.scripts]
ryp-gui = "ryp_framework.gui_app:main"
ryp = "ryp_framework.cli:main"
